syntax = "proto3";

message PrimeNumber {
  int64 id = 1;
  int64 number = 2;
}

service PrimeNumberService {
  rpc CheckPrime(PrimeNumber) returns (PrimeNumberResponse);
}

message PrimeNumberResponse {
  bool isPrime = 1;
}
